--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.thymeleaf.cache=true
 spring.datasource.url= jdbc:mysql://localhost:3306/bd_login?serverTimezone=GMT
 spring.datasource.username= root
+spring.datasource.password= root
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
