--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 	
 	<name>GESTIONSpringV2</name>
-	<description>Software de gestion en Spring! hecho por Thomas Díaz</description>
+	<description>Software de gestion para la direccion de deportes de Baradero</description>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
