--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,8 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		
 <!-- *** -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,6 +81,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+	        <groupId>com.github.librepdf</groupId>
+	        <artifactId>openpdf</artifactId>
+       		<version>1.3.20</version>
+    	</dependency>
 	</dependencies>
 	
 	<build>
