--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
 	        <artifactId>openpdf</artifactId>
        		<version>1.3.20</version>
     	</dependency>
+    	<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		     <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
