--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
 		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		
-		
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.10.10</version>
+		</dependency>
 <!-- *** -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
