--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/bd_login?serverTimezone=GMT
 spring.datasource.username= root
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.properties.hibernate.jdbc.time_zone=GMT
 
 
 
