--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
